# fiveclaw-agent

./: .env.example  .gitignore  LICENSE  README.md  llms.txt  pyproject.toml
fiveclaw_agent/: __init__.py  __main__.py  config.py  local.py  remote.py  server.py
fiveclaw_agent/engines/: __init__.py  config.py  patterns_data.py  tools.py
