[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiveclaw-agent"
version = "1.3.1"
description = "Local MCP agent for FiveClaw — FiveM AI development tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "paramiko>=3.0",
    "luaparser>=3.1",
    "lupa>=2.0",
]

[project.scripts]
fiveclaw = "fiveclaw_agent.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fiveclaw_agent*"]
