[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fiveclaw-agent"
version = "1.4.1"
description = "Local MCP agent for FiveClaw — FiveM AI development tools"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=3.0",
    "paramiko>=3.0",
    "luaparser>=3.1",
    "lupa>=2.0",
    "pymysql>=1.1",                    # pure-Python MySQL client — no mysql CLI binary needed on any OS
    "python-socketio[client]>=5.11",  # txAdmin live-console channel for tool_server_console
]

[project.scripts]
fiveclaw = "fiveclaw_agent.server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["fiveclaw_agent*"]
